// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MusicPlayerAndQueue > when the isQueueListOpened value is false > matches the snapshot 1`] = `
"<music-player-stub></music-player-stub>
<queue-player-stub></queue-player-stub>
<queue-list-stub style="display: none;"></queue-list-stub>"
`;

exports[`MusicPlayerAndQueue > when the isQueueListOpened value is true > matches the snapshot 1`] = `
"<music-player-stub></music-player-stub>
<queue-player-stub></queue-player-stub>
<queue-list-stub class="slide-up-down-enter-from slide-up-down-enter-active"></queue-list-stub>"
`;

exports[`MusicPlayerAndQueue > when the isQueuePlayerOpened value is false > matches the snapshot 1`] = `
"<music-player-stub></music-player-stub>
<!--v-if-->
<queue-list-stub style="display: none;"></queue-list-stub>"
`;

exports[`MusicPlayerAndQueue > when the isQueuePlayerOpened value is true > matches the snapshot 1`] = `
"<music-player-stub></music-player-stub>
<queue-player-stub class="slide-up-down-enter-from slide-up-down-enter-active"></queue-player-stub>
<queue-list-stub style="display: none;"></queue-list-stub>"
`;

exports[`MusicPlayerAndQueue > when the showMediaPlayer value is false > matches the snapshot 1`] = `
"<!--v-if-->
<!--v-if-->
<queue-list-stub style="display: none;"></queue-list-stub>"
`;

exports[`MusicPlayerAndQueue > when the showMediaPlayer value is true > matches the snapshot 1`] = `
"<music-player-stub class="slide-up-down-enter-from slide-up-down-enter-active"></music-player-stub>
<!--v-if-->
<queue-list-stub style="display: none;"></queue-list-stub>"
`;
